<resources>
    <string name="app_name">DailyTaskSamplePoc</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="something_went_wrong">Something went wrong.Please try again after some time.</string>
    <string name="server_error_msg">Server Not Responding.Please try again Later</string>
    <string name="title_home">Home</string>
    <string name="title_country">Country</string>
    <string name="action_settings">Settings</string>
    <string name="static_shortcut_label_short">New Donut</string>
    <string name="static_shortcut_label_long">Create New Donut</string>
    <string name="static_shortcut_disabled_message">New Donut Shortcut Disabled</string>
    <string name="donut_name">Donut name</string>
    <string name="donut_description">Description</string>
    <string name="donut_rating">Rating</string>
    <string name="coffee_name">Coffee name</string>
    <string name="coffee_description">Description</string>
    <string name="coffee_rating">Rating</string>
    <string name="delete">delete</string>
    <string name="defaultChannel">DonutTracker default channel</string>
    <string name="notificationDescription">Notifications from DonutTracker</string>
    <string name="addDonutInfo">Add more donut info!</string>
    <string name="deepLinkNotificationTitle">Deep Link</string>
    <string name="donutName">donutName</string>
    <string name="donutPicture">Picture of donut</string>
    <string name="coffeeName">coffeeName</string>
    <string name="coffeePicture">Picture of a cup of coffee</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="rating">Rating</string>
    <string name="cont">Continue</string>
    <string name="welcomeText">Welcome to Donut Tracker 2</string>
    <string name="enable">Enable Coffee tracking?</string>
    <string name="settings">Settings</string>
    <string name="coffee_list">Coffee List</string>
    <string name="donut_list">Donut List</string>
    <string name="description">Select to enable coffee tracking features</string>
    <string name="sign_into_omnicure">Sign into %1$s</string>
    <string name="welcome_to_omnicurenow">Welcome to\n%1$s</string>
    <string name="welcome_to_omnicure">Welcome to\n%1$s!</string>
    <string name="select_account">Select your account</string>
    <string name="remote_provider">Remote Provider</string>
    <string name="remote_desc">I am a critical care professional providing remote support</string>
    <string name="local_care_provider">Local Care Provider</string>
    <string name="lcp_desc">I am a healthcare professional taking care of patients onsite</string>
    <string name="patient">Patient</string>
    <string name="patient_desc">I am a patient in need of critical care.</string>
    <string name="already_have_an_account_log_in">Already have account? LOG IN</string>
    <string name="reg_success_desc">Your account is being verified. You will receive a confirmation email to sign into your %1$s account. \n\nIf you have any questions, please email us at <b>support@omnicuremd.com</b>.</string>
    <string name="lcp_sign_up">Sign up as Local Care Provider </string>
    <string name="rp_sign_up">Sign up as Remote Provider </string>
    <string name="verify_my_account">Verify my account</string>
    <string name="verify_your_account">Verify your\naccount</string>
    <string name="agree_terms_and_conditions">I agree to the Terms &amp; Conditions</string>
    <string name="next">Next</string>
    <string name="verify_account">Verify account</string>
    <string name="select_a_hospital">Select a hospital</string>
    <string name="search_hospital">Search hospital</string>
    <string name="terms_and_condition">By signing up you agree to %1$s <u>Terms &amp; Conditions</u></string>
    <string name="terms_and_condition_text">Terms &amp; Conditions</string>
    <string name="end_user_agreement">End User License Agreement</string>
    <string name="enter_email_address">Enter account email address</string>
    <string name="reset_password_desc">To reset your password enter the email address or phone number associated with your account.</string>
    <string name="back_to_signIn">Back to SIGN IN</string>
    <string name="back_to_logIn">Back to LOG IN</string>
    <string name="save_new_password">Save new password</string>
    <string name="new_password_desc">Enter your new password below.</string>
    <string name="enter_user_id">Enter user ID</string>
    <string name="password">Password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="password_mandatory">Password*</string>
    <string name="sign_in">Log In</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_dashboard">Go to My Dashboard</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="first_name">First name</string>
    <string name="search_hint">Search by name or keyword</string>
    <string name="relative_first_name">Your First Name</string>
    <string name="first_name_mandatory">First Name*</string>
    <string name="last_name">Last name</string>
    <string name="relative_last_name">Your Last Name</string>
    <string name="last_name_mandatory">Last Name*</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_mandatory">Phone Number*</string>
    <string name="enter_email">Enter Your Email Address</string>
    <string name="confirms_password">Enter confirm password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="id_continue">Continue</string>
    <string name="no_internet_connectivity">No Internet Connectivity</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="no_messages_to_filter">There are no messages to filter</string>
    <string name="recovery_email_sent">Password recovery link has been sent to your email address</string>
    <string name="first_name_empty">First name cannot be empty</string>
    <string name="first_name_empty_addpatient">Invalid first name. Try again.</string>
    <string name="password_keyboard_sequence">Password is in keyboard sequence</string>
    <string name="first_name_does_not_password">First name doesn\'t allow to set as password</string>
    <string name="last_name_does_not_password">Last name doesn\'t allow to set as password</string>
    <string name="email_keyboard_sequence">Email is in keyboard sequence</string>
    <string name="password_strength_too_low">Password strength is too low</string>
    <string name="first_name_empty_try_again">Invalid first name. Try again</string>
    <string name="last_name_empty_try_again">Invalid last name. Try again</string>
    <string name="email_empty_try_again">Invalid email address. Try again.</string>
    <string name="chief_complaint_empty">Chief complaint cannot be empty</string>
    <string name="chief_complaint_empty_addpatient">Invalid chief complaint. Try again.</string>
    <string name="last_name_empty">Last name cannot be empty</string>
    <string name="last_name_empty_addpatient">Invalid last name. Try again.</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="invalid_emailid">Email is invalid</string>
    <string name="invalid_emailid_try_again">Invalid email address. Try Again</string>
    <string name="phone_number_empty">Phone number cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="current_password_empty">Please enter current password</string>
    <string name="new_password_empty">Please enter new password</string>
    <string name="invalid_password">Password should not be less than 8 characters</string>
    <string name="new_invalid_password">New password should not be less than 8 characters</string>
    <string name="current_invalid_password">Current password should not be less than 8 characters</string>
    <string name="confirm_password_empty">Please enter confirm password</string>
    <string name="confirm_password_invalid">Confirm password does not match with password</string>
    <string name="signup_error">Could not sign up, please retry</string>
    <string name="lost_internet_retry">You lost internet connectivity, please retry</string>
    <string name="session_invalidated_message">You have been logged out due to another new login session with same credentials.</string>
    <string name="session_invalidated_message_token">You have been logged out due to session expiry. Please log back in with your credentials to continue.</string>
    <string name="submitted_for_confirmation">Submitted for confirmation</string>
    <string name="reg_submit_success_msg_1">Your account has been successfully submitted and is pending for approval.</string>
    <string name="reg_submit_success_msg_2">You will receive an email and text to confirm and access you account.</string>
    <string name="dob">Date of Birth</string>
    <string name="experiance">Experience</string>
    <string name="select_dob">Select DOB</string>
    <string name="otp_msg">A one-time code has been sent to</string>
    <string name="resent_code">Request a new one</string>
    <string name="resent_code_text">Didn’t receive a code?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_phone_otp">Enter Phone OTP</string>
    <string name="enter_email_otp">Enter Email OTP</string>
    <string name="didn_t_get_otp">Didn\'t receive a code?</string>
    <string name="resent_otp">Request new one</string>
    <string name="otp_verify_error">Could not verify otp, please retry</string>
    <string name="verify">Verify</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="denied_user">Denied User</string>
    <string name="login_exceeded">Session Invalidated</string>
    <string name="session_expired">Session Expired</string>
    <string name="user_locked_title">User locked</string>
    <string name="account_in_use">Account already in use</string>
    <string name="logout_other_devices">Do you want to logout on other devices?</string>
    <string name="dob_empty">Date of Birth cannot be empty</string>
    <string name="dob_empty_addpatient">Invalid DOB. Try again.</string>
    <string name="select_gender">Invalid gender. Try again.</string>
    <string name="select_oxygen">Invalid supplemental oxygen. Try again.</string>
    <string name="select_AVPU">Invalid AVPU. Try again.</string>
    <string name="select_mVentilation">Invalid mechanical ventilation. Try again.</string>
    <string name="select_nVentilation">Invalid non-invasive ventilation. Try again.</string>
    <string name="country_code">+1</string>
    <string name="directory">Directory</string>
    <string name="directory_list_empty">Directory List is empty</string>
    <string name="fetch_directory_pb_text">Fetching directories, please wait</string>
    <string name="email_address">Email address</string>
    <string name="app_logo">App Logo</string>
    <string name="forword_button_arrow">Forword Button Arrow</string>
    <string name="success">Success</string>
    <string name="resetPassword">Reset Password</string>
    <string name="password_reset_success">Your password has been reset.</string>
    <string name="font_family_regular"><![CDATA[sans-serif<]]></string>
</resources>