<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin_25">

        <ImageView
            android:id="@+id/tick"
            android:layout_width="@dimen/margin_50"
            android:layout_height="@dimen/margin_50"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/forword_button_arrow"
            app:srcCompat="@drawable/ic_checkmark" />

        <TextView
            android:id="@+id/id_welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:fontFamily="@string/font_family_medium"
            app:layout_constraintTop_toBottomOf="@id/tick"
            android:gravity="top"
            android:text="@string/welcome_to_omnicure"
            android:textAppearance="@style/text_title" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@id/id_welcome_text"
            android:text="@string/reg_success_desc"
            android:textAppearance="@style/textBody"
            android:clickable="true"
            android:autoLink="email"/>

        <TextView
            android:id="@+id/alreadySigninText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textFontWeight="600"
            android:textColor="@color/btn_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/back_to_logIn"
            android:textSize="@dimen/text_size"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
