<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/id_back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:tint="@color/title_color"
                app:srcCompat="@drawable/ic_back_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginHorizontal="@dimen/margin_25"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".activity.ForgotPasswordActivity">


            <ImageView
                android:id="@+id/id_logo_img"
                android:layout_width="@dimen/margin_40"
                android:layout_height="@dimen/margin_40"
                android:layout_gravity="center|start"
                android:contentDescription="@string/app_logo"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/resetPasswordTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_signin_btn_height"
                android:layout_gravity="center|start"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@string/font_family_medium"
                android:gravity="center|start"
                android:text="@string/resetPassword"
                android:textAppearance="@style/text_title" />

            <TextView
                android:id="@+id/resetPasswordDesc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_signin_btn_height"
                android:layout_gravity="center|start"
                android:fontFamily="@string/font_family_medium"
                android:gravity="center|start"
                android:text="@string/reset_password_desc"
                android:textAppearance="@style/textSubTitle" />

            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal|end"
                android:orientation="horizontal"
                android:padding="@dimen/margin_4"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rbEmailAddress"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_40"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/email_address"
                    android:textAppearance="@style/text_body"
                    android:theme="@style/MyRadioButtonStyleViolet" />

                <RadioButton
                    android:id="@+id/rbPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_40"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/phone_number"
                    android:textAppearance="@style/text_body"
                    android:theme="@style/MyRadioButtonStyleViolet" />
            </RadioGroup>


            <com.mvp.omnicure.utils.CustomErrorEditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_gravity="center"
                android:background="@drawable/ash_border_drawable_bg"
                android:ems="10"
                android:fontFamily="@string/font_family_regular"
                android:hint="@string/enter_email_address"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress|textVisiblePassword"
                android:longClickable="false"
                android:maxLines="1"
                android:paddingLeft="@dimen/login_edittext_lnr_padding"
                android:paddingRight="@dimen/login_edittext_lnr_padding"
                android:textAppearance="@style/text_body"
                android:textColor="@color/title_black"
                android:textColorHint="@drawable/edittext_hint_color"
                android:textCursorDrawable="@drawable/edittext_cursor_color" />

            <LinearLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:background="@drawable/ash_border_drawable_bg"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/margin_5"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spnCountryCode"
                    android:layout_width="@dimen/margin_45"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/spinner_drawable"
                    android:text="@string/country_code"
                    android:textAppearance="@style/textSubTitle" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="1dp"
                    android:background="@color/edittext_stroke_color" />

                <com.mvp.omnicure.utils.CustomGroupEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/transparent_bg"
                    android:digits="0123456789-"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:longClickable="false"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/margin_14"
                    android:paddingRight="@dimen/margin_5"
                    android:saveEnabled="true"
                    android:textAppearance="@style/textSubTitle"
                    android:textColor="@color/title_black"
                    android:textColorHint="@drawable/edittext_hint_color"
                    android:textCursorDrawable="@drawable/edittext_cursor_color" />
            </LinearLayout>

            <Button
                android:id="@+id/txtResetPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/login_signin_btn_margin"
                android:background="@drawable/signin_selector_btn_bg_new"
                android:text="@string/resetPassword"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector_text"
                android:textSize="@dimen/btn_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtBackToSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_signin_btn_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_signin_btn_margin"
            android:gravity="center"
            android:text="@string/back_to_signIn"
            android:textAppearance="@style/textSubTitle" />

    </RelativeLayout>
</layout>
