<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"

    app:startDestination="@id/donutList">

        <fragment
            android:id="@+id/donutList"
            android:name="com.example.dailytasksamplepoc.conditionalnavigation.donut.DonutList"
            android:label="@string/donut_list" >
            <action
                android:id="@+id/action_donutList_to_donutEntryDialogFragment"
                app:destination="@id/donutEntryDialogFragment" />
            <action
                android:id="@+id/action_donutList_to_selectionFragment"
                app:destination="@id/selectionFragment" />
        </fragment>
        <dialog
            android:id="@+id/donutEntryDialogFragment"
            android:name="com.example.dailytasksamplepoc.conditionalnavigation.donut.DonutEntryDialogFragment"
            android:label="DonutEntryDialogFragment">
            <deepLink app:uri="myapp://navdonutcreator.com/donutcreator" />
            <argument
                android:name="itemId"
                app:argType="long"
                android:defaultValue="-1L" />
        </dialog>
        <fragment
            android:id="@+id/selectionFragment"
            android:name="com.example.dailytasksamplepoc.conditionalnavigation.setup.SelectionFragment"
            android:label="@string/settings"
            tools:layout="@layout/fragment_selection" >
            <action
                android:id="@+id/action_selectionFragment_to_donutList"
                app:destination="@id/donutList" />
        </fragment>
        <fragment
            android:id="@+id/coffeeList"
            android:name="com.example.dailytasksamplepoc.conditionalnavigation.coffee.CoffeeList"
            android:label="@string/coffee_list" >
            <action
                android:id="@+id/action_coffeeList_to_coffeeEntryDialogFragment"
                app:destination="@id/coffeeEntryDialogFragment" />
        </fragment>
        <dialog
            android:id="@+id/coffeeEntryDialogFragment"
            android:name="com.example.dailytasksamplepoc.conditionalnavigation.coffee.CoffeeEntryDialogFragment"
            android:label="CoffeeEntryDialogFragment">
            <argument
                android:name="itemId"
                app:argType="long"
                android:defaultValue="-1L" />
        </dialog>
    </navigation>
